--- a/SchoolPrj/appsettings.json
+++ b/SchoolPrj/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "dbcontext": "Server=.;Database=SchoolDb;TrustServerCertificate=True;UID=sa;Pwd=P@ssw0rd;"
+  },
+  "jwtSettings": {
+    "secret": "SchoolProjectCleanArchitectureKey",
+    "issuer": "SchoolApi",
+    "audience": "Website",
+    "validateLifetime": true,
+    "validateIssuerSigningKey": true,
+    "validateIssuer": true,
+    "validateAudience": true,
+    "AccessTokenExpireDate": 1,
+    "RefreshTokenExpireDate": 20
   }
 }
